# ai-assistant

./: .gitignore  README.md  build.spec  install.bat  pyproject.toml
.github/workflows/: build-windows.yml
docs/superpowers/plans/: 2026-03-23-cnc-assistant-redesign.md  2026-03-24-auto-updater.md
docs/superpowers/specs/: 2026-03-23-cnc-assistant-redesign-design.md  2026-03-24-auto-updater-design.md
src/actions/: executor.py
src/assistant/: __init__.py  brain.py  config.py  engine.py  hotkey.py  main.py  screen.py  speaker.py  updater.py  voice.py
src/knowledge/: candle_guide.txt  loader.py  ttc450_manual.txt
src/ui/: overlay.py  tray.py
tests/: test_config.py  test_executor_highlight.py  test_hotkey.py  test_knowledge_loader.py  test_overlay.py  test_smoke.py  test_updater.py
